fixed the issue where the claw would go out of bounds, implemented a method to determine whether the claw grabbed the ball and am starting to fix the timer starting once the button is clicked.

--- a/src/main/resources/templates/style.css
+++ b/src/main/resources/templates/style.css
@@ -30,17 +30,6 @@ h1 {
     margin-top: 75px;
     border-radius: 20%;
 }
-
-#claw {
-    background-color: black;
-    height: 130px;
-    width: 30px;
-    position: absolute;
-    transform: translate(70px,-400px);
-    will-change: transform;
-
-}
-
 #timer {
     background-color: black;
     height: 40px;
@@ -52,6 +41,30 @@ h1 {
     line-height: 40px;
     font-family: sans-serif;
     font-size: 30px;
+    color: white;
+}
+
+#claw {
+    background-color: black;
+    height: 130px;
+    width: 30px;
+    position: absolute;
+    transform: translate(70px,-400px);
+    will-change: transform;
+
+}
+
+#start-button {
+    background-color: rebeccapurple;
+    height: 40px;
+    width: 100px;
+    position: absolute;
+    transform: translate(275px,-140px);
+    border-radius: 10%;
+    text-align: center;
+    line-height: 40px;
+    font-family: sans-serif;
+    font-size: 23px;
     color: white;
 }
 
